--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.2",
     "pinia": "^2.1.7",
     "qrcode": "^1.5.3",
+    "sweetalert2": "^11.12.1",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3",
     "vue3-apexcharts": "^1.5.3"
